VPC Setup.yml
Description: Creating VPC 
Parameters: 
    VPCName: 
      Description: VPC environment name
      Type: String
      
    VpcCIDR:
      Description: VPC CIDR Range
      Type: String
      Default: 10.10.0.0/16
    
    PublicSubnet1A:
      Description: Public Subnet under 1A
      Type: String
      Default: 10.10.1.0/24
    
    PublicSubnet1B:
      Description: Public Subnet under 1B
      Type: String
      Default: 10.10.2.0/24
    
    PrivateSubnet1A:
      Description: Private Subnet 1A
      Type: String
      Default: 10.10.3.0/24
    
    PrivateSubnet1B: 
      Description: Private Subnet 1B
      Type: String
      Default: 10.10.4.0/24
      
Resources:
    VPC:
      Type: AWS::EC2::VPC
      Properties: 
         CidrBlock: !Ref VpcCIDR
         Tags:
            - Key: Name
              Value: !Ref VPCName
              
    InternetGateway: 
      Type: AWS::EC2::InternetGateway    
      Properties:
        Tags:
          - Key: Name
            Value: !Ref VPCName
             
    InternetGatewayAttachment:
      Type: AWS::EC2::VPCGatewayAttachment
      Properties:
        InternetGatewayId: !Ref InternetGateway
        VpcId: !Ref VPC
        
    PublicSubnet1:
      Type: AWS::EC2::Subnet
      Properties:
        VpcId: !Ref VPC
        AvailabilityZone: !Select [ 0, !GetAZs ]
        CidrBlock: !Ref PublicSubnet1A
        MapPublicIpOnLaunch: true
        Tags:
           - Key: Name
             Value: !Sub ${VPCName} Public Subnet (AZ1)
             
    PublicSubnet2:
      Type: AWS::EC2::Subnet
      Properties:
        VpcId: !Ref VPC
        AvailabilityZone: !Select [ 1, !GetAZs ]
        CidrBlock: !Ref PublicSubnet1B
        MapPublicIpOnLaunch: true
        Tags:
           - Key: Name 
             Value: !Sub ${VPCName} Public Subnet (AZ2)
             
    PrivateSubnet1:
      Type: AWS::EC2::Subnet
      Properties:
        VpcId: !Ref VPC
        AvailabilityZone: !Select [ 0, !GetAZs ]
        CidrBlock: !Ref PrivateSubnet1A
        MapPublicIpOnLaunch: false
        Tags:
          - Key: Name
            Value: !Sub ${VPCName} Private Subnet (AZ1)
    
    PrivateSubnet2:
      Type: AWS::EC2::Subnet
      Properties:
        VpcId: !Ref VPC
        AvailabilityZone: !Select [ 1, !GetAZs ]
        CidrBlock: !Ref PrivateSubnet1B
        MapPublicIpOnLaunch: false
        Tags:
           - Key: Name
             Value: !Sub ${VPCName} Private Subnet (AZ2)
           
    NatGateway1EIP:
      Type: AWS::EC2::EIP
      DependsOn: InternetGatewayAttachment
      Properties:
         Domain: VPC
    
    NatGateway1:
      Type: AWS::EC2::NatGateway
      Properties:
        AllocationId: !GetAtt NatGateway1EIP.AllocationId
        SubnetId: !Ref PublicSubnet1
    
    
    PublicRouteTable:
      Type: AWS::EC2::RouteTable
      Properties: 
        VpcId: !Ref VPC
        Tags:
           - Key: Name
             Value: !Sub ${VPCName} Public Routes
     
    DefaultPublicRoute:
       Type: AWS::EC2::Route
       DependsOn: InternetGatewayAttachment
       Properties:
         RouteTableId: !Ref PublicRouteTable
         DestinationCidrBlock: 0.0.0.0/0
         GatewayId: !Ref InternetGateway     
     
    PublicSubnet1RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation  
        Properties:
           RouteTableId: !Ref PublicRouteTable
           SubnetId:  !Ref PublicSubnet1
    
    PublicSunet2RouteTableAssociation:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
        RouteTableId: !Ref PublicRouteTable
        SubnetId: !Ref PublicSubnet2
    
    PrivateRouteTable1:
      Type: AWS::EC2::RouteTable
      Properties:
       VpcId: !Ref VPC
       Tags:
          - Key: Name
            Value:  !Sub ${VPCName} Private Route
    
    DefualtPrivateRoute1:
      Type: AWS::EC2::Route
      Properties:
        RouteTableId: !Ref PrivateRouteTable1
        DestinationCidrBlock: 0.0.0.0/0
        NatGatewayId: !Ref NatGateway1
        
    PrivateSubnet1RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
          RouteTableId: !Ref PrivateRouteTable1
          SubnetId: !Ref PrivateSubnet1
          
    PrivateSubnet1RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
          RouteTableId: !Ref PrivateRouteTable1
          SubnetId: !Ref PrivateSubnet1        
         
Outputs:
    VPC: 
      Description: Referance to Created VPC
      Value: !Ref VPC
      
    PublicSubnets:
      Description: Referance to Public Subnets
      Value: !Join [",", [ !Ref PublicSubnet1, !Ref PublicSubnet2 ]]
      
    PrivateSubnets: 
      Description: Referance to Private Subnets
      Value: !Join [",", [ !Ref PrivateSubnet1, !Ref PrivateSubnet2 ]]
